--- a/css/inicio.css
+++ b/css/inicio.css
@@ -13,8 +13,6 @@
     "cabecera"
     "principal"
     "pie";
-    /* background: linear-gradient(rgb(255, 255, 255), rgb(152, 152, 152), rgb(140, 187, 148), rgb(255, 255, 255)); */
-    /* padding-bottom: 3rem; */
     background-image: linear-gradient(#757575, #848484 ,#a0a0a0, #f2efef);
     min-height: 100vh;
 }
@@ -68,7 +66,22 @@ a{
 .logo{
     width: 3rem;
     margin: 0.1rem;
+    /* Animación del logo */
+    animation-name: mover;
+    animation-duration: 2s;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
 }
+
+@keyframes mover{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+}
+
 .menu-nav{
     position:absolute;
     right: 1rem;
@@ -277,7 +290,7 @@ textarea{
 /* Modificaciones sección Preguntas */
 
 .preguntas{
-    background-color: rgb(172, 208, 181);
+    background-image: linear-gradient(#aff3c4, rgb(190, 239, 210), rgb(188, 216, 216));
     width: 80%;
     margin: 1rem auto 1rem;
     border-radius: .25rem;
