--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,1 +1,11 @@
-$cprimario: #49e149;
+$colores: (
+    "cprimario": #49e149,
+    "cnavbar": #656965,
+);
+
+$anchos: (
+    "completo": 100%,
+    "pricipal": 80%,
+);
+
+$mobile: 768px;
