--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -12,7 +12,7 @@
     width: 80%;
     min-height: 85vh;
     align-items: center;
-    border-bottom: 1px solid $cprimario;
+    border-bottom: 1px solid map-get($map: $colores, $key: cprimario);
 }
 .titlep{
     grid-area: titlep;
@@ -22,7 +22,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     text-shadow: .15rem .15rem .15rem #32653b;
     text-align: center;
-    color: $cprimario;
+    color: map-get($map: $colores, $key: cprimario);
     #villa{
         color:rgb(0, 0, 0);
     }
@@ -33,7 +33,7 @@
     margin-bottom: 0.7rem;
     font-family: 'Libre Franklin', sans-serif;
     line-height: 1.5rem;
-    border-top: 1px solid $cprimario;
+    border-top: 1px solid map-get($map: $colores, $key: cprimario);
     .parrafo__text{
         margin: 0.6rem 1rem 0.2rem 1rem;
     }
@@ -49,7 +49,7 @@
         width: 100%;
         margin-bottom: 0.7rem;
         border-radius: 1rem;
-        border: 1.7px solid $cprimario;
+        border: 1.7px solid map-get($map: $colores, $key: cprimario);
         box-shadow: 3px 1px 5px #383737;
     }
 }
