--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -51,7 +51,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: $mobile) {
     .container{
         grid-column: 1, 1fr;
         grid-row: 3, 1fr;
