--- a/css/inicio.css
+++ b/css/inicio.css
@@ -91,15 +91,35 @@
 }
 
 /*Estilos del footer*/
-.pie {
-  grid-area: pie;
-  width: 100%;
-  margin: 0.5rem auto;
-  padding: 0.5rem;
-  text-align: center;
+/* follow */
+.social {
+  margin: 50px;
 }
-.pie a {
-  text-decoration: none;
+
+.social p {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.links a {
+  margin: 0 30px;
+}
+
+.links a i {
+  font-size: 2rem;
+}
+
+.fab {
+  color: #49e149;
+  width: 2.7rem;
+  height: 2.7rem;
 }
 
 .principal {
