--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -95,14 +95,31 @@
 }
 
 /*Estilos del footer*/
-.pie{
-    grid-area: pie;
-    width: 100%;
-    margin: .5rem auto;
-    padding: .5rem;
+/* follow */
+.social {
+    margin: 50px;
+}
+.social p {
     text-align: center;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    a{
-        text-decoration: none;
-    }
+.links a {
+    margin: 0 30px;
+}
+
+.links a i {
+    font-size: 2rem;
+}
+
+.fab{
+    color: map-get($map: $colores, $key: cprimario );
+    width: 2.7rem;
+    height: 2.7rem;
 }
