--- a/css/inicio.css
+++ b/css/inicio.css
@@ -11,7 +11,7 @@
   grid-template-rows: repeat(3, auto);
   grid-template-areas: "header" "principal" "pie";
   width: 100%;
-  background-image: linear-gradient(#757575, #848484, #a0a0a0, #f2efef);
+  background-image: linear-gradient(#ebeaea, #ebeaea, #b8b8b8, #a6a4a4, #ebeaea, #ebeaea);
 }
 
 /*estilos del menú de navegación*/
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.5rem;
-  background-color: #656965;
+  background-color: rgb(9, 9, 9);
 }
 .cabecera .list-nav {
   display: flex;
@@ -36,20 +36,19 @@
 .cabecera .list-nav .list {
   margin: 0.34rem;
   padding: 0.3rem;
-  text-decoration: none;
   font-size: 1rem;
   font-family: "Trebuchet MS", Arial, sans-serif;
 }
 .cabecera .list-nav .list:hover {
-  background-color: #49e149;
+  background-color: #656965;
   transition: background-color 0.6s;
   border-radius: 0.5rem;
 }
 .cabecera .list-nav .list a {
   text-decoration: none;
-  color: #fff;
+  color: #49e149;
   font-size: 1.25rem;
-  margin-right: 0.5rem;
+  margin: 0.5rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration: none;
 }
@@ -61,28 +60,43 @@
 .div-logo .logo {
   width: 3rem;
   margin: 0.1rem;
-  /* Animación del logo */
-  animation-name: mover;
-  animation-duration: 2s;
-  animation-iteration-count: 2;
-  animation-direction: alternate;
 }
 
-@keyframes mover {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(100%);
-  }
+.container1 {
+  margin-top: 0;
+  display: grid;
+  grid-template-columns: 1, 1fr;
+  grid-template-rows: repeat(2, auto);
+  grid-template-areas: "titlep" "principal";
 }
+
+.titlep {
+  grid-area: titlep;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+  font-size: 4rem;
+  font-family: "Roboto Condensed", sans-serif;
+  text-shadow: 0.15rem 0.15rem 0.15rem #080909;
+  text-align: center;
+  color: #49e149;
+  background-image: url(../imagenes-proyecto/tecladol.webp);
+  background-size: 100%;
+  background-position: 50%;
+}
+.titlep #villa {
+  color: rgb(226, 226, 226);
+}
+
 /*Estilos del contenido principal*/
 .principal {
   grid-area: principal;
   display: grid;
   grid-template-columns: 1, 1fr;
   grid-template-rows: repeat(3, auto);
-  grid-template-areas: "titlep" "parrafo" "section-image";
+  grid-template-areas: "titlec" "parrafo" "section-image";
   margin: auto;
   width: 80%;
   min-height: 85vh;
@@ -92,6 +106,13 @@
 
 /*Estilos del footer*/
 /* follow */
+.pie {
+  background-image: url(../imagenes-proyecto/ola.svg);
+  background-size: 100%;
+  background-position: 50%;
+  background-repeat: none;
+}
+
 .social {
   margin: 50px;
 }
@@ -117,48 +138,20 @@
 }
 
 .fab {
-  color: rgb(71, 158, 83);
+  color: #49e149;
   width: 2.7rem;
   height: 2.7rem;
-}
-
-.principal {
-  grid-area: principal;
-  display: grid;
-  grid-template-columns: 1, 1fr;
-  grid-template-rows: repeat(3, auto);
-  grid-template-areas: "titlep" "parrafo" "section-image";
-  margin: auto;
-  width: 80%;
-  min-height: 85vh;
-  align-items: center;
-  border-bottom: 1px solid #49e149;
-}
-
-.titlep {
-  grid-area: titlep;
-  width: 100%;
-  margin: 2rem 0;
-  font-size: 4rem;
-  font-family: "Roboto Condensed", sans-serif;
-  text-shadow: 0.15rem 0.15rem 0.15rem #32653b;
-  text-align: center;
-  color: #49e149;
-}
-.titlep #villa {
-  color: rgb(0, 0, 0);
 }
 
 .parrafo {
   grid-area: parrafo;
   font-size: 1.3rem;
-  margin-bottom: 0.7rem;
+  margin: 2rem 0 0.7rem 0;
   font-family: "Libre Franklin", sans-serif;
   line-height: 1.5rem;
-  border-top: 1px solid #49e149;
 }
 .parrafo .parrafo__text {
-  margin: 0.6rem 1rem 0.2rem 1rem;
+  margin: 0.6rem 1rem 1.5rem 1rem;
 }
 .parrafo .negrita {
   font-weight: bolder;
@@ -175,6 +168,10 @@
   border-radius: 1rem;
   border: 1.7px solid #49e149;
   box-shadow: 3px 1px 5px #383737;
+}
+
+.principal2 {
+  border-top: 1px solid #49e149;
 }
 
 .titlec {
@@ -250,19 +247,19 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 4fr);
-  margin: 2rem auto 0;
+  margin: 2rem auto 1rem;
   justify-items: center;
   justify-content: center;
   gap: 0.5rem;
 }
 
 .planes {
-  background: url(../imagenes-proyecto/megas.jpg);
+  background: url(../imagenes-proyecto/lineasmegas.jpg);
   background-size: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  color: rgb(155, 155, 155);
+  color: rgb(55, 120, 117);
   border-radius: 10px;
   box-shadow: 5px 1px 5px #383737;
 }
