--- a/css/inicio.css
+++ b/css/inicio.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.5rem;
-  background-color: rgb(9, 9, 9);
+  background-color: rgb(36, 186, 118);
 }
 .cabecera .list-nav {
   display: flex;
@@ -40,13 +40,13 @@
   font-family: "Trebuchet MS", Arial, sans-serif;
 }
 .cabecera .list-nav .list:hover {
-  background-color: #656965;
+  background-color: rgb(100, 102, 100);
   transition: background-color 0.6s;
   border-radius: 0.5rem;
 }
 .cabecera .list-nav .list a {
   text-decoration: none;
-  color: #49e149;
+  color: rgb(213, 213, 213);
   font-size: 1.25rem;
   margin: 0.5rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -79,10 +79,10 @@
   height: 60vh;
   font-size: 4rem;
   font-family: "Roboto Condensed", sans-serif;
-  text-shadow: 0.15rem 0.15rem 0.15rem #080909;
+  text-shadow: 0.25rem 0.25rem 0.5rem #000000;
   text-align: center;
   color: #49e149;
-  background-image: url(../imagenes-proyecto/tecladob.jpg);
+  background-image: url(../imagenes-proyecto/usuario3.webp);
   background-size: 100%;
   background-position-y: 53%;
 }
@@ -109,12 +109,13 @@
 .pie {
   background-image: url(../imagenes-proyecto/ola.svg);
   background-size: 100%;
-  background-position: 50%;
+  background-position-y: 43%;
   background-repeat: none;
 }
 
 .social {
   margin: 50px;
+  margin-top: 0.5rem;
 }
 
 .social p {
@@ -138,9 +139,24 @@
 }
 
 .fab {
-  color: #49e149;
   width: 2.7rem;
   height: 2.7rem;
+}
+
+.fa-facebook-f {
+  color: rgb(74, 112, 238);
+}
+
+.fa-youtube {
+  color: rgb(198, 2, 2);
+}
+
+.fa-instagram {
+  color: #b300ff;
+}
+
+.fa-tiktok {
+  color: #73b9ef;
 }
 
 .principal2 {
@@ -277,7 +293,7 @@
 }
 
 /* Modificaciones sección Preguntas */
-.preguntas, .preguntas .preguntas__title {
+.preguntas {
   background-image: linear-gradient(#aff3c4, rgb(190, 239, 210), rgb(188, 216, 216));
   width: 80%;
   margin: 1rem auto 1rem;
@@ -285,9 +301,10 @@
   border: 1.8px solid #49e149;
   padding: 1rem;
 }
-.preguntas:hover, .preguntas .preguntas__title:hover {
+.preguntas:hover {
   transform: scale(1.1);
 }
+
 .preguntas1 {
   background-color: rgb(172, 208, 181);
   width: 80%;
